# xde-helpers

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS.in  README  README.in  README.md  README.md.in  RELEASE  RELEASE.md  THANKS  TODO  autogen.sh  configure.ac  configure.template  index.md
src/: Makefile.am  checkem  convem  countem  ddpretty  diffem  dmerge  dpretty  dupem  evenmore.lst  fillem  findbins  findem  fixem  fixexec  iconfind  morem  pretty.pl  pushem
src/app-install/desktop/: 0xdbe-eap.desktop  13309728253.desktop  2bwm.desktop  2dslamdemo.desktop  2gis.desktop  3dchess.desktop  3ncode-git.desktop  4kslideshowmaker.desktop  4pane-git.desktop  555-boom.desktop  7-light-years.desktop  7kaa.desktop  7zFM.desktop  AClock.desktop  AcDown.desktop  AcetoneISO.desktop  AdobeReader.desktop  AfterStep.desktop  AlephOne.desktop  AlsaMixer.app.desktop  Animeshell.desktop  Arch-AUR.desktop  Arch-Bugs.desktop  Arch-Developers.desktop  (+4254 more)
src/applications/: 13309728252.desktop  13309728253.desktop  140-hib.desktop  1g1g.desktop  2048-git.desktop  2048.desktop  2bwm.desktop  3dchess.desktop  4Pane.desktop  4kstogram.desktop  4kvideodownloader.desktop  4kyoutubetomp3.desktop  4pane-svn.desktop  4pane.desktop  7-nanocycles.desktop  AdobeReader.desktop  AlsaMixer.app.desktop  Arch-AUR.desktop  Arch-Bugs.desktop  Arch-Developers.desktop  Arch-Documentation.desktop  Arch-Donate-de.desktop  Arch-Donate.desktop  Arch-Forum.desktop  Arch-Homepage-de.desktop  Arch-Homepage.desktop  Arch-SVN.desktop  Arch-Schwag.desktop  Arch-Wiki.desktop  BackupTo.desktop  BitSharesX.desktop  Bluemindo.desktop  CELayoutEditor.desktop  CMake.desktop  Centripetal.desktop  Cidadao.desktop  Clonezilla-live.desktop  Clonezilla-server.desktop  ControlPanel.desktop  DDRace.desktop  (+2886 more)
src/autostart/: Makefile.am  bbrun.desktop  cbatticon.desktop  compton-fluxbox.desktop  compton.desktop  deja-dup-monitor.desktop  dhcpcd-gtk.desktop  docker.desktop  gatotray.desktop  gnome-keyring-pkcs11.desktop  gnome-keyring-secrets.desktop  gnome-keyring-ssh.desktop  icewmtray.desktop  idesk.desktop  lxpanel.desktop  menutray.desktop  nm-applet.desktop  pnmixer.desktop  polkit-mate-authentication-agent-1.desktop  remmina-applet.desktop  retrovol.desktop  sd-applet.desktop  smproxy.desktop  wmCalClock.desktop  wmWeather.desktop  wmappl.desktop  wmbattery.desktop  wmblob.desktop  wmbubble.desktop  wmclockmon.desktop  wmcore.desktop  wmcpuload.desktop  wmmixer.desktop  wmnd.desktop  wmnet.desktop  wmsysmon.desktop  wmsystemtray.desktop  wmtimer.desktop  wmweather+.desktop  xde-input.desktop  (+5 more)
src/desktop-directories/: Makefile.am  X-X11-Tools.directory  dockapps.directory  xde-2dgraphics.directory  xde-accessibility.directory  xde-accessories.directory  xde-applications.directory  xde-archlinux.directory  xde-development.directory  xde-dockapps.directory  xde-education.directory  xde-games.directory  xde-gnome-webapplications.directory  xde-graphics.directory  xde-internet.directory  xde-multimedia.directory  xde-office.directory  xde-other.directory  xde-science.directory  xde-settings.directory  xde-shell.directory  xde-system-tools.directory  xde-windowmanager.directory  xde-x11-tools.directory
src/dockapps/: AlsaMixer.app.desktop  Makefile.am  allin1.desktop  asclock.desktop  bbrun.desktop  bubblemon.desktop  docker.desktop  flipse.desktop  lal.desktop  peksystray.desktop  wmBinClock.desktop  wmCalClock.desktop  wmCalClockKbd.desktop  wmMand.desktop  wmMoonClock.desktop  wmWeather.desktop  wmacpi.desktop  wmappl.desktop  wmauda.desktop  wmbattery.desktop  wmbiff.desktop  wmblob.desktop  wmblueclock.desktop  wmbluecpu.desktop  wmbluegpu.desktop  wmbluemem.desktop  wmbubble.desktop  wmbutton.desktop  wmcalc.desktop  wmcdplay.desktop  wmcliphist.desktop  wmclock.desktop  wmclockmon.desktop  wmcore.desktop  wmcpu.desktop  wmcpuload.desktop  wmcpumon.desktop  wmdate.desktop  wmdiskmon.desktop  wmfire.desktop  (+37 more)
src/fallback/: 010editor.desktop  04LXDE.desktop  0xdbe.desktop  13309728251.desktop  13309728252.desktop  13309728253.desktop  13309728254.desktop  2299thegame.desktop  2bwm.desktop  2dslamdemo.desktop  2h4u.desktop  3d_chess.desktop  3dchess.desktop  3dfsb.desktop  3ncode.desktop  4chan-downloader.desktop  4kvideotomp3.desktop  7digital.desktop  7zFM.desktop  8kingdoms.desktop  AClock.desktop  ARCserve.desktop  AcetoneISO.desktop  AdobeReader.desktop  AfterStep.desktop  AlephOne.desktop  AlsaMixer.app.desktop  Arch-AUR.desktop  Arch-Bugs.desktop  Arch-Developers.desktop  Arch-Documentation.desktop  Arch-Donate.desktop  Arch-Forum.desktop  Arch-Homepage.desktop  Arch-SVN.desktop  Arch-Schwag.desktop  Arch-Wiki-de.desktop  Arch-Wiki.desktop  Areida.desktop  Astade-Trace.desktop  (+5143 more)
src/icons/: Makefile.am  chbg_64x64.xpm  cycle.xpm  makepngs  scalem
src/menus/: Makefile.am  unexicon-applications.menu  xde-applications.menu
src/trayicons/: Makefile.am  alltray.desktop  cbatticon.desktop  docker-tray.desktop  fbxkb.desktop  ftmenu.desktop  gatotray.desktop  gnome-screenshot.desktop  knetworkmanager.desktop  lalcal.desktop  mailtc.desktop  menutray.desktop  moc-tray.desktop  peksystray.desktop  pnmixer.desktop  retrovol.desktop  sbxkb.desktop  sd-applet.desktop  stalonetray.desktop  trayer.desktop  wmsystemtray.desktop  xdg-monitor.desktop  xdg-traymenu.desktop  xfce4-clipman-plugin.desktop  xmms2tray.desktop
src/xsessions/: 2bwm.desktop  AfterStep.desktop  Fvwm.desktop  Fvwm1.desktop  Jwm.desktop  LXDE.desktop  Makefile.am  adwm.desktop  aewm++.desktop  aewm.desktop  awesome.desktop  blackbox.desktop  bspwm.desktop  compiz.desktop  ctwm.desktop  custom.desktop  cwm.desktop  dwm.desktop  e16-gnome2-session.desktop  e16-gnome3-session.desktop  e16-kde-session.desktop  e16-session.desktop  echinus.desktop  ede.desktop  enlightenment.desktop  evilwm.desktop  failsafewm.desktop  fluxbox-fbcompose.desktop  fluxbox-gediminas.desktop  fluxbox.desktop  flwm.desktop  fvwm-crystal.desktop  fvwm.desktop  fvwm2.desktop  gnome.desktop  goomwwm.desktop  herbstluftwm.desktop  i3-with-shmlog.desktop  i3.desktop  icewm-session.desktop  (+30 more)
