
AUTOMAKE_OPTIONS = nostdinc

dist_appl_DATA = \
	src/applications/aafire.desktop \
	src/applications/adie.desktop \
	src/applications/AdobeReader.desktop \
	src/applications/allin1.desktop \
	src/applications/AlsaMixer.app.desktop \
	src/applications/bbpager.desktop \
	src/applications/bbrun.desktop \
	src/applications/blackbox.desktop \
	src/applications/bubblemon.desktop \
	src/applications/calculator.desktop \
	src/applications/cbatticon.desktop \
	src/applications/conky.desktop \
	src/applications/dhcpcd-gtk.desktop \
	src/applications/docker.desktop \
	src/applications/editres.desktop \
	src/applications/fbpanel.desktop \
	src/applications/fbrun.desktop \
	src/applications/fbxkb.desktop \
	src/applications/fluxbox.desktop \
	src/applications/ftmenu.desktop \
	src/applications/gmrun.desktop \
	src/applications/gtk2_prefs.desktop \
	src/applications/gtk-chtheme.desktop \
	src/applications/gtk-theme-switch2.desktop \
	src/applications/gvncviewer.desktop \
	src/applications/icewm.desktop \
	src/applications/lal.desktop \
	src/applications/lxde-logout.desktop \
	src/applications/lxinput.desktop \
	src/applications/lxpanelctl.desktop \
	src/applications/lxpanel.desktop \
	src/applications/notification-properties.desktop \
	src/applications/obxprop.desktop \
	src/applications/openbox.desktop \
	src/applications/pango-view.desktop \
	src/applications/peksystray.desktop \
	src/applications/piedock.desktop \
	src/applications/preferred-execute.desktop \
	src/applications/preferred-file-manager.desktop \
	src/applications/preferred-mail-reader.desktop \
	src/applications/preferred-terminal.desktop \
	src/applications/preferred-text-editor.desktop \
	src/applications/preferred-web-browser.desktop \
	src/applications/raktpdf.desktop \
	src/applications/retrovol.desktop \
	src/applications/sbxkb.desktop \
	src/applications/slock.desktop \
	src/applications/unclutter.desktop \
	src/applications/volume-app.desktop \
	src/applications/wmappl.desktop \
	src/applications/wmbattery.desktop \
	src/applications/wmBinClock.desktop \
	src/applications/wmblob.desktop \
	src/applications/wmcalc.desktop \
	src/applications/wmCalClock.desktop \
	src/applications/wmCalClockKbd.desktop \
	src/applications/wmclockmon.desktop \
	src/applications/wmcore.desktop \
	src/applications/wmcpu.desktop \
	src/applications/wmcpuload.desktop \
	src/applications/wmmixer.desktop \
	src/applications/wmnd.desktop \
	src/applications/wmnet.desktop \
	src/applications/wmsysmon.desktop \
	src/applications/wmsystray.desktop \
	src/applications/wmtime.desktop \
	src/applications/wmtimer.desktop \
	src/applications/wmtrash.desktop \
	src/applications/wmwave.desktop \
	src/applications/wmWeather.desktop \
	src/applications/wmwifi.desktop \
	src/applications/xcalc.desktop \
	src/applications/xclock.desktop \
	src/applications/xde-input.desktop \
	src/applications/xde-logout.desktop \
	src/applications/xde-panel.desktop \
	src/applications/xde-run.desktop \
	src/applications/xdpyinfo.desktop \
	src/applications/xev.desktop \
	src/applications/xfontsel.desktop \
	src/applications/xinput.desktop \
	src/applications/xkbvleds.desktop \
	src/applications/xkbwatch.desktop \
	src/applications/xkill.desktop \
	src/applications/xlsatoms.desktop \
	src/applications/xlsclients.desktop \
	src/applications/xmodmap.desktop \
	src/applications/xprop.desktop \
	src/applications/xrandr.desktop \
	src/applications/xrefresh.desktop \
	src/applications/xrestop.desktop \
	src/applications/xset.desktop \
	src/applications/xvinfo.desktop \
	src/applications/xwd.desktop \
	src/applications/xwininfo.desktop \
	src/applications/xwud.desktop

dist_sess_DATA = \
	src/xsessions/2bwm.desktop \
	src/xsessions/aewm.desktop \
	src/xsessions/AfterStep.desktop \
	src/xsessions/blackbox.desktop \
	src/xsessions/bspwm.desktop \
	src/xsessions/ctwm.desktop \
	src/xsessions/e16-gnome2-session.desktop \
	src/xsessions/e16-gnome3-session.desktop \
	src/xsessions/e16-kde-session.desktop \
	src/xsessions/e16-session.desktop \
	src/xsessions/ede.desktop \
	src/xsessions/evilwm.desktop \
	src/xsessions/failsafewm.desktop \
	src/xsessions/fluxbox.desktop \
	src/xsessions/flwm.desktop \
	src/xsessions/Fvwm1.desktop \
	src/xsessions/fvwm-crystal.desktop \
	src/xsessions/Fvwm.desktop \
	src/xsessions/fvwm.desktop \
	src/xsessions/gnome.desktop \
	src/xsessions/icewm-session.desktop \
	src/xsessions/Jwm.desktop \
	src/xsessions/LXDE.desktop \
	src/xsessions/metacity.desktop \
	src/xsessions/mwm.desktop \
	src/xsessions/openbox.desktop \
	src/xsessions/openbox-gnome.desktop \
	src/xsessions/openbox-kde.desktop \
	src/xsessions/pekwm.desktop \
	src/xsessions/spectrwm.desktop \
	src/xsessions/ssh.desktop \
	src/xsessions/twm.desktop \
	src/xsessions/uwm.desktop \
	src/xsessions/waimea.desktop \
	src/xsessions/wind.desktop \
	src/xsessions/wmaker.desktop \
	src/xsessions/wmii.desktop \
	src/xsessions/xfce.desktop \
	src/xsessions/yeahwm.desktop

dist_auto_DATA = \
	src/autostart/bbrun.desktop \
	src/autostart/cbatticon.desktop \
	src/autostart/compton.desktop \
	src/autostart/compton-fluxbox.desktop \
	src/autostart/dhcpcd-gtk.desktop \
	src/autostart/docker.desktop \
	src/autostart/gatotray.desktop \
	src/autostart/icewmtray.desktop \
	src/autostart/idesk.desktop \
	src/autostart/lxpanel.desktop \
	src/autostart/menutray.desktop \
	src/autostart/nm-applet.desktop \
	src/autostart/pnmixer.desktop \
	src/autostart/remmina-applet.desktop \
	src/autostart/retrovol.desktop \
	src/autostart/smproxy.desktop \
	src/autostart/wmappl.desktop \
	src/autostart/wmbattery.desktop \
	src/autostart/wmblob.desktop \
	src/autostart/wmCalClock.desktop \
	src/autostart/wmclockmon.desktop \
	src/autostart/wmcore.desktop \
	src/autostart/wmcpuload.desktop \
	src/autostart/wmmixer.desktop \
	src/autostart/wmnd.desktop \
	src/autostart/wmnet.desktop \
	src/autostart/wmsysmon.desktop \
	src/autostart/wmsystemtray.desktop \
	src/autostart/wmtimer.desktop \
	src/autostart/wmWeather.desktop \
	src/autostart/wmweather+.desktop \
	src/autostart/xde-input.desktop \
	src/autostart/xde-panel.desktop \
	src/autostart/xde-setbg.desktop \
	src/autostart/xde-traymenu.desktop

dist_menu_DATA = \
	src/menus/unexicon-applications.menu \
	src/menus/xde-applications.menu

dist_dirs_DATA = \
	src/desktop-directories/dockapps.directory \
	src/desktop-directories/xde-accessibility.directory \
	src/desktop-directories/xde-accessories.directory \
	src/desktop-directories/xde-applications.directory \
	src/desktop-directories/xde-archlinux.directory \
	src/desktop-directories/xde-development.directory \
	src/desktop-directories/xde-dockapps.directory \
	src/desktop-directories/xde-education.directory \
	src/desktop-directories/xde-games.directory \
	src/desktop-directories/xde-gnome-webapplications.directory \
	src/desktop-directories/xde-graphics.directory \
	src/desktop-directories/xde-internet.directory \
	src/desktop-directories/xde-multimedia.directory \
	src/desktop-directories/xde-office.directory \
	src/desktop-directories/xde-other.directory \
	src/desktop-directories/xde-science.directory \
	src/desktop-directories/xde-settings.directory \
	src/desktop-directories/xde-system-tools.directory \
	src/desktop-directories/xde-x11-tools.directory \
	src/desktop-directories/X-X11-Tools.directory
